[project]
name = "score_keeper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Flask",
    "Flask-Principal",
    "Flask-Migrate",
    "Flask-Login",
    "Flask-SQLAlchemy",
    "Psycopg2",
    "Werkzeug",
    "pydantic",
    "flask-limiter",
    "Flask-Limiter[redis]",
    "flask-cors",
    "pytest",
    "cryptography>=44.0.2",
]

[dependency-groups]
dev = [
    "mocker>=1.1.1",
    "pytest>=8.3.5",
]
